Changed style of TOC.

--- a/config.org
+++ b/config.org
@@ -2,63 +2,63 @@
 #+TITLE: Dan's DOOM emacs configuration
 #+OPTIONS: toc:nil tags:nil todo:nil
 
-* Table Of Contents :TOC_9_org:
-- [[Rationale][Rationale]]
-  - [[~(message "Hello, %s!" "emacs")~][~(message "Hello, %s!" "emacs")~]]
-  - [[Distro-hopping with emacs distros][Distro-hopping with emacs distros]]
-  - [[Back to vanilla.][Back to vanilla.]]
-  - [[Why DOOM?][Why DOOM?]]
-  - [[TL;DR:][TL;DR:]]
-- [[Installation][Installation]]
-  - [[Prerequisites][Prerequisites]]
-- [[Configuration][Configuration]]
-  - [[init.el][init.el]]
-    - [[Lexical binding.][Lexical binding.]]
-    - [[doom!][doom!]]
-      - [[Document which modules I choose and why.][Document which modules I choose and why.]]
-        - [[:input][:input]]
-        - [[:completion][:completion]]
-        - [[:ui][:ui]]
-        - [[:editor][:editor]]
-        - [[:emacs][:emacs]]
-        - [[:term][:term]]
-        - [[:checkers][:checkers]]
-        - [[:tools][:tools]]
-        - [[:tools][:tools]]
-        - [[:lang][:lang]]
-          - [[rust +lsp][rust +lsp]]
-            - [[Dependencies:][Dependencies:]]
-          - [[sh][sh]]
-          - [[web][web]]
-        - [[:email][:email]]
-        - [[:app][:app]]
-        - [[:config][:config]]
-  - [[package.el][package.el]]
-    - [[Lexical binding][Lexical binding]]
-    - [[How does package.el work?][How does package.el work?]]
-    - [[Declarations][Declarations]]
-  - [[config.el][config.el]]
-    - [[Lexical binding][Lexical binding]]
-    - [[Personal information][Personal information]]
-    - [[Default font][Default font]]
-    - [[Default theme][Default theme]]
-      - [[Nord powered aesthetics.][Nord powered aesthetics.]]
-    - [[Rainbow Delimeters][Rainbow Delimeters]]
-    - [[Modeline][Modeline]]
-    - [[Perspective][Perspective]]
-    - [[Org][Org]]
-    - [[Pretending we are in vim? That's just plain EVIL!][Pretending we are in vim? That's just plain EVIL!]]
-    - [[Line-numbers][Line-numbers]]
-    - [[Helpful][Helpful]]
-    - [[Which Key][Which Key]]
-    - [[Customize Group][Customize Group]]
-    - [[RSS, or how to get news the old-way.][RSS, or how to get news the old-way.]]
-      - [[Create =x= keybinding for =starring= (★) a register, in search map and show map][Create =x= keybinding for =starring= (★) a register, in search map and show map]]
-    - [[Japanese input.][Japanese input.]]
-      - [[Prerequesites][Prerequesites]]
-    - [[Rust][Rust]]
-      - [[See if we can use ~set-popup-rules!~ to do this for us.][See if we can use ~set-popup-rules!~ to do this for us.]]
-  - [[Private modules.][Private modules.]]
+* Table Of Contents :TOC_9:
+- [[#rationale][Rationale]]
+  - [[#message-hello-s-emacs][~(message "Hello, %s!" "emacs")~]]
+  - [[#distro-hopping-with-emacs-distros][Distro-hopping with emacs distros]]
+  - [[#back-to-vanilla][Back to vanilla.]]
+  - [[#why-doom][Why DOOM?]]
+  - [[#tldr][TL;DR:]]
+- [[#installation][Installation]]
+  - [[#prerequisites][Prerequisites]]
+- [[#configuration][Configuration]]
+  - [[#initel][init.el]]
+    - [[#lexical-binding][Lexical binding.]]
+    - [[#doom][doom!]]
+      - [[#document-which-modules-i-choose-and-why][Document which modules I choose and why.]]
+        - [[#input][:input]]
+        - [[#completion][:completion]]
+        - [[#ui][:ui]]
+        - [[#editor][:editor]]
+        - [[#emacs][:emacs]]
+        - [[#term][:term]]
+        - [[#checkers][:checkers]]
+        - [[#tools][:tools]]
+        - [[#tools-1][:tools]]
+        - [[#lang][:lang]]
+          - [[#rust-lsp][rust +lsp]]
+            - [[#dependencies][Dependencies:]]
+          - [[#sh][sh]]
+          - [[#web][web]]
+        - [[#email][:email]]
+        - [[#app][:app]]
+        - [[#config][:config]]
+  - [[#packageel][package.el]]
+    - [[#lexical-binding-1][Lexical binding]]
+    - [[#how-does-packageel-work][How does package.el work?]]
+    - [[#declarations][Declarations]]
+  - [[#configel][config.el]]
+    - [[#lexical-binding-2][Lexical binding]]
+    - [[#personal-information][Personal information]]
+    - [[#default-font][Default font]]
+    - [[#default-theme][Default theme]]
+      - [[#nord-powered-aesthetics][Nord powered aesthetics.]]
+    - [[#rainbow-delimeters][Rainbow Delimeters]]
+    - [[#modeline][Modeline]]
+    - [[#perspective][Perspective]]
+    - [[#org][Org]]
+    - [[#pretending-we-are-in-vim-thats-just-plain-evil][Pretending we are in vim? That's just plain EVIL!]]
+    - [[#line-numbers][Line-numbers]]
+    - [[#helpful][Helpful]]
+    - [[#which-key][Which Key]]
+    - [[#customize-group][Customize Group]]
+    - [[#rss-or-how-to-get-news-the-old-way][RSS, or how to get news the old-way.]]
+      - [[#create-x-keybinding-for-starring--a-register-in-search-map-and-show-map][Create =x= keybinding for =starring= (★) a register, in search map and show map]]
+    - [[#japanese-input][Japanese input.]]
+      - [[#prerequesites][Prerequesites]]
+    - [[#rust][Rust]]
+      - [[#see-if-we-can-use-set-popup-rules-to-do-this-for-us][See if we can use ~set-popup-rules!~ to do this for us.]]
+  - [[#private-modules][Private modules.]]
 
 * Rationale
 
