--- a/config.org
+++ b/config.org
@@ -235,7 +235,8 @@ to. Honorable mentions in this categories are =lsp= and =treemacs=.
 The following image shows the number of =TODO= tasks that I left unresolved
 in my vanilla configuration just before switching to =doom=.
 
-#+ATTR_HTML style="margin-left: auto; margin-right: auto;"
+# TODO Align this image in center, use `markdown` for images with org babel?
+
 #+CAPTION: So many todos, so little time...
 [[https://raw.githubusercontent.com/danilevy1212/doom/master/img/too-many-todos.png]]
 
